--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "^2.11.6",
     "@rails/webpacker": "5.4.4",
     "bootstrap": "^5.2.3",
+    "flatpickr": "^4.6.13",
     "stimulus": "^3.2.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
