--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.5",
     "@popperjs/core": "^2.11.6",
-    "@rails/webpacker": "5.4.4",
+    "@rails/webpacker": "^5.4.4",
     "bootstrap": "^5.2.3",
     "flatpickr": "^4.6.13",
     "stimulus": "^3.2.1",
@@ -17,6 +17,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.2.7",
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^4.11.1"
   }
 }
